--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "chart.js": "^4.4.1"
+        "chart.js": "^4.4.1",
+        "dropzone": "^6.0.0-beta.2"
     }
 }
